Use ColumnView for listing GH activities

--- a/ruff.toml
+++ b/ruff.toml
@@ -49,4 +49,4 @@ lines-after-imports = 2
 'src/pages/preferences_page.py' = ["E402"]
 'src/github_client.py' = ["E402"]
 'src/main.py' = ["E402"]
-'src/app_logging.py' = ["E402"]
+'src/logup.py' = ["E402"]
