--- a/src/paths.py.in
+++ b/src/paths.py.in
@@ -5,8 +5,12 @@ from pathlib import Path
 # It provides the installed paths for the application
 
 PKGDATADIR = '@pkgdatadir@'
+VERSION = '@version@'
 
 # Fallback for development (if @pkgdatadir@ is not substituted or doesn't exist)
 if PKGDATADIR.startswith('@') or not PKGDATADIR or not os.path.exists(PKGDATADIR):
     # Assume source layout: PKGDATADIR is the project root (where 'data' is)
     PKGDATADIR = str(Path(__file__).parent.parent)
+
+if VERSION.startswith('@'):
+    VERSION = '0.1.0'
